--- a/LuckyStrike/Input/Input.csproj
+++ b/LuckyStrike/Input/Input.csproj
@@ -32,6 +32,8 @@
   <ItemGroup>
     <Reference Include="System" />
     <Reference Include="System.Core" />
+    <Reference Include="System.Drawing" />
+    <Reference Include="System.Windows.Forms" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
@@ -39,13 +41,24 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="AbstractData.cs" />
     <Compile Include="AbstractGrubber.cs" />
     <Compile Include="AbstractInterpreter.cs" />
     <Compile Include="InputFactory.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="ScreenFactory.cs" />
+    <Compile Include="ScreenData.cs" />
+    <Compile Include="ScreenInputFactory.cs" />
     <Compile Include="ScreenGrubber.cs" />
     <Compile Include="ScreenInterpreter.cs" />
+    <Compile Include="TestGrabber.cs" />
+    <Compile Include="TestInputFactory.cs" />
+    <Compile Include="TestInterpreter.cs" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\Common\Common.csproj">
+      <Project>{15be96eb-6bc7-465a-a6ac-eea2e9cfece4}</Project>
+      <Name>Common</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
