--- a/LuckyStrike/Input/Input.csproj
+++ b/LuckyStrike/Input/Input.csproj
@@ -65,7 +65,7 @@
     <Compile Include="AbstractData.cs" />
     <Compile Include="AbstractGrabber.cs" />
     <Compile Include="AbstractInterpreter.cs" />
-    <Compile Include="DigitOCR.cs" />
+    <Compile Include="BitmapExt.cs" />
     <Compile Include="InputFactory.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ScreenData.cs" />
